// When2Meet Clone Database Schema (DBML) - Simplified Design

Table events {
  id int [pk, increment]
  name varchar(128) [not null]
  hash varchar(8) [unique, not null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table event_datetime {
  id int [pk, increment]
  event_id int [ref: > events.id]
  date date [not null]
  start_time time [not null]
  end_time time [not null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table event_participants {
  id int [pk, increment]
  name varchar(64) [not null]
  password varchar(255)
  event_id int [ref: > events.id]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    (name, event_id) [unique]
  }
}

Table available_datetime {
  id int [pk, increment]
  event_id int [ref: > events.id]
  participant_id int [ref: > event_participants.id]
  date date [not null]
  start_time time [not null]
  end_time time [not null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: '''
  Participant availability records with same structure as event_datetime.
  Each record represents a participant's availability for a specific date and time range.
  '''
}